--- a/activate.html
+++ b/activate.html
@@ -61,7 +61,7 @@
 <span>Account Number</span>
 </div>
 <br>
- <b id="accountNumberToCopy">3156670723</b>
+ <b id="accountNumberToCopy">9122716897</b>
 <br>
 </div>
 <br>
@@ -69,7 +69,7 @@
   <span>Bank Name</span>
 </div>
 <br>
-<b>First Bank</b>
+<b>PALMPAY</b>
 <br>
 </div>
 <br>
@@ -77,7 +77,7 @@
   <span>Account Name</span>
 </div>
 <br>
-<b>Agent Stella</b>
+<b>RANDOM NAME</b>
 <br>
 </div>
 <br>
