--- a/dashboard.html
+++ b/dashboard.html
@@ -210,7 +210,7 @@ function op() {
 };
 
 function tap() {
-  window.location.href = 'https://t.me/opaybeta1'
+  window.location.href = 'https://t.me/DARK_UPDATES1'
 };
 
 function eye() {
