--- a/hid.html
+++ b/hid.html
@@ -162,7 +162,7 @@ margin-bottom: 10px;
     <i class="fa-solid fa-chart-line"></i>
   Finance</button>
   <button>
-    <a href="https://t.me/opaybeta1" style="color: #232E3E; text-decoration: none;">
+    <a href="https://t.me/DARK_UPDATES1" style="color: #232E3E; text-decoration: none;">
  <i class="fa-brands fa-telegram"></i>Telegram</button>
 </a>
   <button onclick="next()">
@@ -210,7 +210,7 @@ function op() {
 };
 
 function tap() {
-  window.location.href = 'https://t.me/opaybeta1'
+  window.location.href = 'https://t.me/DARK_UPDATES1'
 };
 
 function eye() {
